fabrik/internal/engine/testdata/assets_select_compiled_consumer.txt
Switch mode cannot bind *assetmapper.Compiled because source mode only
satisfies assetmapper.Runtime.
-- go.mod --
module app

go 1.26

require (
	github.com/gofabrik/fabrik/assetmapper v0.0.0
	github.com/gofabrik/fabrik/config v0.0.0
)

replace (
	github.com/gofabrik/fabrik/assetmapper => ASSETSDIR
	github.com/gofabrik/fabrik/config => CONFIGDIR
)
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- web/assets.go --
package web

import (
	"embed"

	"github.com/gofabrik/fabrik/assetmapper"
)

//fabrik:assets
//go:embed all:assets
var Assets embed.FS

//fabrik:config assets
type AssetsConfig = assetmapper.RuntimeConfig
-- web/assets/app.css --
body {}
-- web/web.go --
package web

import (
	"net/http"

	"github.com/gofabrik/fabrik/assetmapper"
)

type Handlers struct {
	Assets *assetmapper.Compiled
}

//fabrik:http GET /{$}
func (h *Handlers) Home(w http.ResponseWriter, r *http.Request) {}
-- want/diags --
error: web/web.go:10:2: no provider for *assetmapper.Compiled (field Assets of web.Handlers)
  help: with a source/compiled asset switch only assetmapper.Runtime is injectable; take assetmapper.Runtime
